@@ -59,13 +59,3 @@ encoder_plugin_get(const char *name)
 
 	return NULL;
 }
-
-void
-encoder_plugin_print_all_types(FILE * fp)
-{
-	encoder_plugins_for_each(plugin)
-		fprintf(fp, "%s ", plugin->name);
-
-	fprintf(fp, "\n");
-	fflush(fp);
-}
