@@ -20,8 +20,6 @@
 #ifndef MPD_ENCODER_LIST_H
 #define MPD_ENCODER_LIST_H
 
-#include <stdio.h>
-
 struct encoder_plugin;
 
 extern const struct encoder_plugin *const encoder_plugins[];
@@ -41,8 +39,5 @@ extern const struct encoder_plugin *const encoder_plugins[];
  */
 const struct encoder_plugin *
 encoder_plugin_get(const char *name);
-
-void
-encoder_plugin_print_all_types(FILE * fp);
 
 #endif
